Changer le titre global

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "utilitR"
+title: "`utilitR`"
 subtitle: "Une documentation utile pour R"
 author: "Lino Galiana, Olivier Meslin"
 institute: "Insee"
