--- a/slides.Rmd
+++ b/slides.Rmd
@@ -33,40 +33,58 @@ options(htmltools.dir.version = FALSE)
 
 Le projet `utilitR` est parti de deux constats : 
 
-1. Multiplicité d’obstacles dans la transition vers `R` :
-    + Diversité des environnements informatiques à l’Insee (poste local, AUS, plateforme innovation…)  ;
-    + Difficultés à s’approprier les outils ou en utiliser tout le potentiel :
+1. **Multiplicité d’obstacles dans la transition vers `R`** :
+    + Diversité des environnements informatiques à l’Insee (poste local, AUS, plateforme innovation puis SSP-Cloud…)  ;
+    + Difficultés à s’approprier les outils et à en utiliser tout le potentiel :
     + Eclatement de la documentation  ;
     + Multiplicité de *packages*, de qualité variable et parfois redondants ;
     + Barrière linguistique.
-2. Il n'existe pas de documentation de référence sur l'usage de `R` pour le statisticien
-    + Documentation de référence sur `SAS` en français, rédigée par
-Axelle Chauvet, largement diffusée à l’Insee et dans le SSP.
-        + Documentation sur `R` foisonnante mais utilise peu d'exemples sur données réelles
+2. Il n'existe **pas de documentation de référence sur l'usage de `R` pour le statisticien** :
+    +  La documentation de référence sur `SAS` en français, rédigée par
+Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R`.
+    + La documentation sur `R` est foisonnante mais propose peu d'exemples sur données réelles.
 
 ---
-# Objectif du projet
+# Objectif du projet `utilitR`
 
 
 Produire une documentation collaborative sur `R`, destinée principalement
-aux agents du SSP (mais pas seulement).
+aux agents du Service statistique public (mais pas seulement).
 
 * La documentation vise à répondre à deux questions :
     1. Comment (bien) travailler avec `R` pour profiter de la richesse de son 
 écosystème ;
-    2. Comment réaliser des tâches élémentaires d'analyse de données avec `R`.
+    2. Comment réaliser des tâches élémentaires avec `R`.
 
 
 * Points d’originalité du projet :
-    + Approche (légèrement) normative : la documentation formule des
-recommandations sur les packages à utiliser ou à éviter, de façon à orienter
+    + Approche (légèrement) normative : la documentation propose des
+recommandations sur les _packages_ à utiliser ou à éviter, de façon à orienter
 les agents vers les outils adaptés ;
-    + Fonctionnement collaboratif et *open source*.
-    + Tous les exemples sont sur données disponibles sur [insee.fr](www.insee.fr)
+    + Fonctionnement collaboratif et *open source* ;
+    + la plupart des exemples utilisent données disponibles sur [insee.fr](www.insee.fr).
 
 ---
+# Contenu de la documentation `utilitR`
 
+La documentation est structurée en deux parties :
 
+* Travailler avec `R` à l'Insee :
+    - Présentation des espaces de travail informatiques (AUSv3 et SSP Cloud) ;
+    - Comment configurer sa session `R` ;
+    - Comment installer et utiliser des _packages_ `R` ;
+    - Comment utiliser RStudio et les `RProject` ;
+    - Comment utiliser `git` et Gilab avec RStudio...
+
+* Réaliser des tâches standard avec `R` : 
+    - Importer des données (SAS, csv, txt, odt, xlsx...) ;
+    - Manipuler des tables de données ;
+    - Faire des graphiques ;
+    - Manipuler des données textuelles ;
+    - Manipuler des données spatiales ;
+    - Utiliser des bases de données PostgreSQL et Oracle..
+
+--- 
 # Positionnement du projet `utilitR`
 
 * Le projet est l’une des multiples initiatives lancées pour faciliter la
@@ -79,7 +97,7 @@ transition de l’Insee vers `R` :
 * Prise en compte de l'évolution de l’environnement informatique du statisticien :
     + Tient compte de la modernisation des serveurs partagés (AUS) ;
     + Présentation de la plateforme [SSP-cloud](https ://datalab.sspcloud.fr/accueil) développée par la Diit  ;
-    + Présente des manières simples d'utiliser les outils assurant la qualité des projets en `R` comme le contrôle de version avec `Git`
+    + Présente des manières simples d'utiliser les outils assurant la qualité des projets en `R` comme le contrôle de version avec `Git`.
 
 
 ---
@@ -87,7 +105,7 @@ transition de l’Insee vers `R` :
 # Où en est le projet aujourd'hui ?
 
 * Un portail d'accès sous forme de site *web* : <www.utilitr.org> :
-    + Documentation principale disponible sur <www.book.utilitr.org> ;
+    + La documentation principale est disponible sur <www.book.utilitr.org> ;
     + Guide des bonnes pratiques en `R` : <www.pratiques.utilitr.org>
 
 S'il ne faut retenir qu'un lien [wwww.utilitr.org](wwww.utilitr.org)
@@ -132,19 +150,18 @@ La coordination est assurée par Lino Galiana et Olivier Meslin.
 # Une méthode de travail pour assurer la qualité de la documentation
 
 Le projet `utilitR` est entièrement développé avec des outils collaboratifs :
-Le projet est stocké sur un dépôt Github, sous licence libre ;
-La documentation est rédigée en Rmarkdown (sous forme de fiches modulaires) et déployée sous la forme d’un site html et d’une brochure pdf ;
-Les contributions prennent la forme de merge requests soumises à une relecture par les pairs et validées collégialement ;
-Quand elles existent, nous réutilisons des ressources existantes en français sous licence libre.
 
-La documentation est conçue pour être intégralement reproductible :
-Le déploiement est assuré par un dispositif d’intégration continue ;
-Nous développons en parallèle un package facilitant l’accès aux données publiées par l’Insee (doremifasol), qui contient notamment les données utilisées dans les exemples.
-
-Les exemples mobilisent des données issues du SSP (code officiel géographique, répertoire Filosofi, données du recensement…).
+- Le projet est stocké sur un dépôt Github, sous licence libre ([https://github.com/InseeFrLab/utilitR]) ;
+- La documentation est rédigée de fiches `R markdown`, publiée sous deux formes :
+    - un site internet ([www.utilitr.org]) ;
+    - une brochure pdf ;
+- Les contributions prennent la forme de merge requests soumises à une relecture par les pairs et validées collégialement ;
 
 
-
+- La documentation est conçue pour être intégralement reproductible :
+- Le déploiement est assuré par un dispositif d’intégration continue ;
+- La grande majorité des exemples utilise des données de l'Insee (code officiel géographique, répertoire Filosofi, base permanente des équipements) ;
+- Nous développons en parallèle un _package_ qui contient notamment les données utilisées dans les exemples (`doremifasolData`).
 
 
 
