--- a/slides.Rmd
+++ b/slides.Rmd
@@ -34,14 +34,14 @@ options(htmltools.dir.version = FALSE)
 Le projet `utilitR` est parti de deux constats : 
 
 1. **Multiplicité d’obstacles dans la transition vers `R`** :
-    + Diversité des environnements informatiques à l’Insee (poste local, AUS, plateforme innovation puis SSP-Cloud…)  ;
+    + Diversité des environnements informatiques à l’Insee (poste local, AUS, plateforme innovation puis SSP-Cloud…) ;
     + Difficultés à s’approprier les outils et à en utiliser tout le potentiel :
-    + Eclatement de la documentation  ;
+    + Eclatement de la documentation de l'écosystème `R` ;
     + Multiplicité de *packages*, de qualité variable et parfois redondants ;
     + Barrière linguistique.
 2. Il n'existe **pas de documentation de référence sur l'usage de `R` pour le statisticien** :
     +  La documentation de référence sur `SAS` en français, rédigée par
-Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R`.
+Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R` ;
     + La documentation sur `R` est foisonnante mais propose peu d'exemples sur données réelles.
 
 ---
@@ -82,9 +82,11 @@ La documentation est structurée en deux parties :
     - Faire des graphiques ;
     - Manipuler des données textuelles ;
     - Manipuler des données spatiales ;
-    - Utiliser des bases de données PostgreSQL et Oracle..
+    - Utiliser des bases de données PostgreSQL et Oracle...
+    
 
---- 
+---
+
 # Positionnement du projet `utilitR`
 
 * Le projet est l’une des multiples initiatives lancées pour faciliter la
