--- a/slides.Rmd
+++ b/slides.Rmd
@@ -57,12 +57,7 @@ aux agents du Service statistique public (mais pas seulement).
     2. Comment réaliser des tâches élémentaires avec `R`.
 
 
-* Points d’originalité du projet :
-    + Approche (légèrement) normative : la documentation propose des
-recommandations sur les _packages_ à utiliser ou à éviter, de façon à orienter
-les agents vers les outils adaptés ;
-    + Fonctionnement collaboratif et *open source* ;
-    + la plupart des exemples utilisent données disponibles sur [insee.fr](www.insee.fr).
+
 
 ---
 # Contenu de la documentation `utilitR`
@@ -82,10 +77,59 @@ La documentation est structurée en deux parties :
     - Faire des graphiques ;
     - Manipuler des données textuelles ;
     - Manipuler des données spatiales ;
+    - Rédiger des documents avec `R Markdown` ;
     - Utiliser des bases de données PostgreSQL et Oracle...
-    
+
 
 ---
+# Contenu de la documentation `utilitR`
+
+Points d’originalité du projet :
++ **Approche (légèrement) normative** :
+    - recommandations sur les _packages_ à utiliser ou à éviter, de façon à orienter
+les agents vers les outils adaptés ;
+    - conseils sur les bonnes pratiques à adopter ;
++ la plupart des exemples mobilisent des données disponibles sur [insee.fr](www.insee.fr) ;
++ **Les exemples sont reproductibles** :
+    - la plupart des exemples mobilisent des données disponibles sur [insee.fr](www.insee.fr) ;
+
+    
+---
+# Diffusion de la documentation `utilitR`
+
+La documentation est diffusée sous deux formes :
+
+- un site internet ([www.utilitr.org]) déjà disponible ;
+- une brochure pdf imprimable (en cours d'élaboration).
+
+-- 
+
+Le site internet est actualisé en continu, tandis que la brochure pdf est publiée de façon ponctuelle et millésimée (version 1 attendue pour juin 2021).
+
+
+
+    
+---
+# Diffusion de la documentation `utilitR`
+
+La documentation est diffusée sous deux formes :
+
+- un site internet ([www.utilitr.org]) déjà disponible ;
+- une brochure pdf imprimable (en cours d'élaboration).
+
+--
+
+Le site internet est actualisé en continu, tandis que la brochure pdf est publiée de façon ponctuelle et millésimée (version 1 attendue pour juin 2021).
+
+---
+
+
+
+
+
+
+
+
 
 # Positionnement du projet `utilitR`
 
@@ -93,12 +137,12 @@ La documentation est structurée en deux parties :
 transition de l’Insee vers `R` : 
     + Supports du groupe de travail USSR ;
     + FunCamp dévéloppé par la Division Innovation et Instruction Technique (Diit) ;
-    + Guide à l'usage du statisticien débutant ;
+    + Guide à l'usage du statisticien débutant (Cédric Afsa) ;
     + Formation Travail collaboratif avec `R` (en cours de développement).
 * Les recommandations de *packages* sont cohérentes avec celles du COPS
 * Prise en compte de l'évolution de l’environnement informatique du statisticien :
     + Tient compte de la modernisation des serveurs partagés (AUS) ;
-    + Présentation de la plateforme [SSP-cloud](https ://datalab.sspcloud.fr/accueil) développée par la Diit  ;
+    + Présentation de la plateforme [SSP-cloud](https ://datalab.sspcloud.fr/accueil) développée par la Diit ;
     + Présente des manières simples d'utiliser les outils assurant la qualité des projets en `R` comme le contrôle de version avec `Git`.
 
 
