une coquille de mise en forme

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -141,9 +141,10 @@ La documentation prend en compte l'évolution de l’environnement informatique 
 --
 * Cinq principes détaillés dans le [manifeste](https://github.com/InseeFrLab/utilitR/blob/master/Manifeste.md) : transparence, ouverture, bienveillance, exigence et reproductibilité.
 --
+
 * Organisation sans hiérarchie :
     * Un _groupe de contributeurs_, avec deux coordinateurs (Lino Galiana et Olivier Meslin) ;
-    * Un _comité de parrainage_ composés de managers : Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
+    * Un _comité de parrainage_ composé de managers : Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
 --
 * La marche à suivre pour contribuer est détaillée dans le [guide de contribution](https://github.com/InseeFrLab/utilitR/blob/master/CONTRIBUTING.md).
 
